i18n: clean up files

--- a/packages/trip-details/i18n/ko.yml
+++ b/packages/trip-details/i18n/ko.yml
@@ -1,5 +1,12 @@
 otpUi:
   TripDetails:
+    FareTable:
+      cash: 현금
+      electronic: 전자
+      regular: 성인
+      senior: 경로
+      special: 특별
+      youth: 청소년
     co2: "CO₂ 배출: <strong>{co2}</strong>"
     co2description: >-
       CO₂ 강도는 각 모드의 CO₂ 강도를 트립에서 각 다리가 걸은 거리를 곱하여 계산됩니다. 각 모드의 CO₂ 강도는 <link>이
@@ -7,13 +14,6 @@ otpUi:
     departure: >-
       <strong>{departureDate, time, short}</strong>에 <strong>{departureDate,
       date, long}</strong> 출발
-    fareDetailsHeaders:
-      cash: 현금
-      electronic: 전자
-      regular: 성인
-      senior: 경로
-      special: 특별
-      youth: 청소년
     hideDetail: 세부정보 숨기기
     showDetail: 세부정보 표시
     title: 트립 상세정보
