i18n: improve french text

--- a/packages/trip-details/i18n/fr.yml
+++ b/packages/trip-details/i18n/fr.yml
@@ -3,7 +3,7 @@ otpUi:
     FareTable:
       cash: Espèces
       electronic: Électronique
-      regular: Normal
+      regular: Plein tarif
       senior: Séniors
       special: Spécial
       youth: Jeunes
