feat(trip-form): support config mode subsetting

--- a/packages/trip-form/i18n/en-US.yml
+++ b/packages/trip-form/i18n/en-US.yml
@@ -25,6 +25,7 @@ otpUi:
       rail-label: Train
       subway-label: Subway
       tram-label: Tram
+      walkReluctance-label: Avoid Walking?
       walkTolerance-label: Walking Tolerance
       walkTolerance-labelHigh: More Walking
       walkTolerance-labelLow: Less Walking
