--- a/packages/itinerary-body/i18n/en-US.yml
+++ b/packages/itinerary-body/i18n/en-US.yml
@@ -25,6 +25,8 @@ otpUi:
       circleClockwise: Follow circle clockwise
       circleCounterClockwise: Follow circle counterclockwise
       continue: Continue
+      enterStation: Enter station
+      exitStation: Exit station
       hardLeft: Hard left
       hardRight: Hard right
       left: Left
@@ -35,6 +37,7 @@ otpUi:
       uTurnRight: Right U-turn
     stepDepart: Head {heading} on {street}
     stepElevator: Take elevator to {street}
+    stepFollowSigns: Follow signs to {street}
     stepGeneric: "{step} on {street}"
     stepHeading:
       east: east
@@ -45,6 +48,7 @@ otpUi:
       southeast: southeast
       southwest: southwest
       west: west
+    stepStation: "{step} at {street}"
     summary: "{mode} to {place}"
     summaryAndDistance: "{mode} {distance} to {place}"
     summaryMode:
