refactor: address pr feedback
Co-authored-by: binh-dam-ibigroup <56846598+binh-dam-ibigroup@users.noreply.github.com>

--- a/packages/itinerary-body/i18n/fr.yml
+++ b/packages/itinerary-body/i18n/fr.yml
@@ -29,7 +29,7 @@ otpUi:
       circleClockwise: Prenez le rond-point par la gauche
       circleCounterClockwise: Prenez le rond-point par la droite
       continue: Continuez
-      enterStation: TODO
+      enterStation: Entrez dans la station
       exitStation: TODO
       hardLeft: Virage à gauche
       hardRight: Virage à droite
