refactor: address pr feedback
Co-authored-by: binh-dam-ibigroup <56846598+binh-dam-ibigroup@users.noreply.github.com>

--- a/packages/itinerary-body/i18n/fr.yml
+++ b/packages/itinerary-body/i18n/fr.yml
@@ -30,7 +30,7 @@ otpUi:
       circleCounterClockwise: Prenez le rond-point par la droite
       continue: Continuez
       enterStation: Entrez dans la station
-      exitStation: TODO
+      exitStation: Sortez de la station
       hardLeft: Virage à gauche
       hardRight: Virage à droite
       left: Tournez à gauche
