--- a/packages/itinerary-body/i18n/fr.yml
+++ b/packages/itinerary-body/i18n/fr.yml
@@ -41,7 +41,7 @@ otpUi:
       uTurnRight: Demi-tour par la droite
     stepDepart: Dirigez-vous vers {heading} sur {street}
     stepElevator: Prenez l'ascenseur jusqu'à {street}
-    stepFollowSigns: TODO {street}
+    stepFollowSigns: Suivez les panneaux vers {street}
     stepGeneric: "{step} sur {street}"
     stepHeading:
       east: l'est
