refactor: address pr feedback
Co-authored-by: binh-dam-ibigroup <56846598+binh-dam-ibigroup@users.noreply.github.com>

--- a/packages/itinerary-body/i18n/fr.yml
+++ b/packages/itinerary-body/i18n/fr.yml
@@ -52,7 +52,7 @@ otpUi:
       southeast: le sud-est
       southwest: le sud-ouest
       west: l'ouest
-    stepStation: "{step} TODO {street}"
+    stepStation: "{step} par {street}"
     summary: "{mode} vers {place}"
     summaryAndDistance: "{mode} - {distance} vers {place}"
     summaryMode:
