fix typo in AT message

--- a/packages/location-field/i18n/en-US.yml
+++ b/packages/location-field/i18n/en-US.yml
@@ -8,7 +8,7 @@ otpUi:
     geocoderUnreachable: Unable to obtain suggestions
     homeLocation: Home
     howToAccessResults: >-
-      Use the down arrow key browse the results list. To select a result, use
+      Use the down arrow key to browse the results list. To select a result, use
       the Enter key.
     myPlaces: My Places
     nearby: Nearby Stops
