--- a/packages/itinerary-body/i18n/en-US.yml
+++ b/packages/itinerary-body/i18n/en-US.yml
@@ -87,10 +87,13 @@ otpUi:
         itinerary} other {itinerary} } is unknown.
       tripIsAccessible: >
         This {leg, select, true {leg of your itinerary} other {itinerary} } is
-        likely wheelchair accessible.
+        wheelchair accessible.
       tripIsInaccessible: >
         This {leg, select, true {leg of your itinerary} other {itinerary} } is
         wheelchair inaccessible.
+      tripIsLikelyAccessible: >
+        This {leg, select, true {leg of your itinerary} other {itinerary} } is
+        likely wheelchair accessible.
     viewOnMap: View on map
   TransitLegBody:
     AlertsBody:
