fix(itinerary-body): wheelchair a11y for AT

--- a/packages/itinerary-body/i18n/en-US.yml
+++ b/packages/itinerary-body/i18n/en-US.yml
@@ -81,6 +81,13 @@ otpUi:
       car: by car
       escooter: by e-scooter
       walk: by walking
+    tripAccessibility:
+      itineraryAccessibility: "Wheelchair accessibility of this trip: "
+      legAccessibility: "Wheelchair accessibility of this trip leg: "
+      tripAccessibilityUnclear: unknown
+      tripIsAccessible: wheelchair accessible
+      tripIsInaccessible: wheelchair inaccessible
+      tripIsLikelyAccessible: likely wheelchair accessible
     viewOnMap: View on map
   TransitLegBody:
     AlertsBody:
