remove redundancies in labeling

--- a/packages/itinerary-body/i18n/en-US.yml
+++ b/packages/itinerary-body/i18n/en-US.yml
@@ -82,12 +82,12 @@ otpUi:
       escooter: by e-scooter
       walk: by walking
     tripAccessibility:
+      accessible: accessible
+      inaccessible: inaccessible
       itineraryAccessibility: "Wheelchair accessibility of this trip: "
       legAccessibility: "Wheelchair accessibility of this trip leg: "
-      tripAccessibilityUnclear: unknown
-      tripIsAccessible: wheelchair accessible
-      tripIsInaccessible: wheelchair inaccessible
-      tripIsLikelyAccessible: likely wheelchair accessible
+      likelyAccessible: likely accessible
+      unclear: unknown
     viewOnMap: View on map
   TransitLegBody:
     AlertsBody:
