--- a/packages/itinerary-body/i18n/fr.yml
+++ b/packages/itinerary-body/i18n/fr.yml
@@ -85,6 +85,13 @@ otpUi:
       car: en voiture
       escooter: en trottinette
       walk: à pied
+    tripAccessibility:
+      accessible: accessible
+      inaccessible: inaccessible
+      itineraryAccessibility: "Accessibilité de ce trajet en fauteuil roulant : "
+      legAccessibility: "Accessibilité de cette étape en fauteuil roulant : "
+      likelyAccessible: probablement accessible
+      unclear: inconnue
     viewOnMap: Afficher sur le plan
   TransitLegBody:
     AlertsBody:
