fix(itinerary-body): wheelchair a11y for AT

--- a/packages/itinerary-body/i18n/en-US.yml
+++ b/packages/itinerary-body/i18n/en-US.yml
@@ -81,6 +81,12 @@ otpUi:
       car: by car
       escooter: by e-scooter
       walk: by walking
+    tripAccessibility:
+      inaccessible: inaccessible
+      itineraryAccessibility: "Wheelchair accessibility of this trip: "
+      legAccessibility: "Wheelchair accessibility of this trip leg: "
+      likelyAccessible: likely accessible
+      unclear: unknown
     viewOnMap: View on map
   TransitLegBody:
     AlertsBody:
