--- a/packages/base-map/i18n/i18n-exceptions.json
+++ b/packages/base-map/i18n/i18n-exceptions.json
@@ -5,7 +5,7 @@
       "MobileHelpText",
       "WindowsHelpText"
     ],
-    "otpUi.mapControls.NavigationControl.*Controls": [
+    "otpUi.mapControls.NavigationControl.*": [
       "ResetBearing",
       "ZoomIn",
       "ZoomOut"
