fix i18n exceptions file

--- a/packages/base-map/i18n/i18n-exceptions.json
+++ b/packages/base-map/i18n/i18n-exceptions.json
@@ -1,6 +1,6 @@
 {
   "groups": {
-    "otpUi.mapControls.CooperativeGesturesHandler.*HelpText": [
+    "otpUi.mapControls.CooperativeGesturesHandler.*": [
       "MacHelpText",
       "MobileHelpText",
       "WindowsHelpText"
@@ -10,7 +10,7 @@
       "ZoomIn",
       "ZoomOut"
     ],
-    "otpUi.mapControls.ScaleControl.*Measurements": [
+    "otpUi.mapControls.ScaleControl.*": [
       "Feet",
       "Kilometers",
       "Meters",
