--- a/packages/base-map/i18n/es.yml
+++ b/packages/base-map/i18n/es.yml
@@ -1,13 +1,13 @@
 otpUi:
   mapControls:
     CooperativeGesturesHandler:
-      MacHelpText: Use ⌘ + scroll to zoom the map
-      MobileHelpText: Use two fingers to move the map
-      WindowsHelpText: Use Ctrl + scroll to zoom the map
+      MacHelpText: Use ⌘ +  desplazar para hacer zoom al mapa
+      MobileHelpText: Use dos dedos para mover el mapa
+      WindowsHelpText: Use Ctrl + desplazar para hacer zoom al mapa
     NavigationControl:
-      ResetBearing: Dirección norte
+      ResetBearing: Reestablecer en dirección norte
       ZoomIn: Acercar
-      ZoomOut: Alejar el zoom
+      ZoomOut: Alejar
     ScaleControl:
       Feet: ft
       Kilometers: km
