--- a/packages/base-map/i18n/vi.yml
+++ b/packages/base-map/i18n/vi.yml
@@ -1,9 +1,9 @@
 otpUi:
   mapControls:
     CooperativeGesturesHandler:
-      MacHelpText: Use ⌘ + scroll to zoom the map
-      MobileHelpText: Use two fingers to move the map
-      WindowsHelpText: Use Ctrl + scroll to zoom the map
+      MacHelpText: Sử dụng phím ⌘ + nút cuộn để phóng to/thu nhỏ bản đồ
+      MobileHelpText: Sử dụng hai ngón tay để di chuyển bản đồ
+      WindowsHelpText: Sử dụng phím Ctrl + nút cuộn để phóng to/thu nhỏ bản đồ
     NavigationControl:
       ResetBearing: Đặt lại phương hướng về hướng bắc
       ZoomIn: Phóng to
