refactor: address PR feedback

--- a/packages/itinerary-body/i18n/en-US.yml
+++ b/packages/itinerary-body/i18n/en-US.yml
@@ -90,7 +90,7 @@ otpUi:
     viewOnMap: View on map
   TransitLegBody:
     AlertsBody:
-      alertLinkText: See alert on agency website
+      alertLinkText: See alert on {agency} website
       effectiveDate: Effective as of {dateTime, date, long}
       effectiveTimeAndDate: Effective as of {dateTime, time, short}, {day}
       externalLink: (External link)
