fix(trip-form): Localize hard-coded text in TripOptions
...with reads from the trip-from package's i18n files.  Strings for
these phrases have been added in the following languages: English,
Spanish, French

This includes:
* The text "Go by Transit" that was used as user-facing and aria label
  for the transit only option
* The text "Open app" which appeared in the FeatureOptionOverlay on a
  button that links to mobility company apps

--- a/packages/trip-form/i18n/en-US.yml
+++ b/packages/trip-form/i18n/en-US.yml
@@ -31,6 +31,9 @@ otpUi:
       walkTolerance-labelLow: Less Walking
       wheelchair-label: Accessible Routing
     settingsLabel: "{mode} settings"
+  TripOptions:
+    transitOnly: Go by Transit
+    openApp: Open app
   SettingsSelectorPanel:
     bikeOnly: Bike Only
     escooterOnly: E-scooter Only
