--- a/packages/trip-form/i18n/fr.yml
+++ b/packages/trip-form/i18n/fr.yml
@@ -39,6 +39,9 @@ otpUi:
     use: Utiliser
     useCompanies: Prestataires
     walkOnly: À pied uniquement
+  TripOptions:
+    transitOnly: En transports publics
+    openApp: Ouvrir l'application
   queryParameters:
     bikeSpeed: Vitesse à vélo
     distanceInMiles: "{miles, number, :: unit/mile unit-width-full-name}"
