Small refactors and cleanup

--- a/packages/itinerary-body/i18n/en-US.yml
+++ b/packages/itinerary-body/i18n/en-US.yml
@@ -90,11 +90,12 @@ otpUi:
     viewOnMap: View on map
   TransitLegBody:
     AlertsBody:
-      agency: agency
       alertLinkText: See alert on {agency} website
       effectiveDate: Effective as of {dateTime, date, long}
       effectiveTimeAndDate: Effective as of {dateTime, time, short}, {day}
       externalLink: (External link)
+      linkOpensNewWindow: (Opens new window)
+      noAgencyAlertLinkText: See alert on agency website
       today: Today
       tomorrow: Tomorrow
       yesterday: Yesterday
