chore(map-popup): Update select floating car translations.

--- a/packages/map-popup/i18n/tl.yml
+++ b/packages/map-popup/i18n/tl.yml
@@ -3,7 +3,7 @@ otpUi:
     availableBikes: "Mga available na bisikleta: {value}"
     availableDocks: "Mga available na dock: {value}"
     floatingBike: "Free-floating na bisikleta: {name}"
-    floatingCar: "{company} {name}"
+    floatingCar: "Sasakyan: {name}"
     floatingEScooter: "E-scooter: {name}"
     popupTitle: "{stationNetwork, select, false {{name}} other {{stationNetwork} {name}}}"
     stopId: "ID ng Hintuan: {stopId}"
