--- a/packages/map-popup/i18n/es.yml
+++ b/packages/map-popup/i18n/es.yml
@@ -3,7 +3,7 @@ otpUi:
     availableBikes: "Bicicletas disponibles: {value}"
     availableDocks: "Estaciones de carga disponibles: {value}"
     floatingBike: "Bicicleta flotante: {name}"
-    floatingCar: "{company} {name}"
+    floatingCar: "Carro: {name}"
     floatingEScooter: Scooter eléctrico {name}
     popupTitle: "{stationNetwork, select, false {{name}} other {{stationNetwork} {name}}}"
     stopId: Parada n°{stopId}
