--- a/packages/map-popup/i18n/zh_Hans.yml
+++ b/packages/map-popup/i18n/zh_Hans.yml
@@ -3,7 +3,7 @@ otpUi:
     availableBikes: "可用的自行车: {value}"
     availableDocks: "可用的充电座: {value}"
     floatingBike: "自由浮动的自行车: {name}"
-    floatingCar: "{company} {name}"
+    floatingCar: "汽车: {name}"
     floatingEScooter: "{name} 电动滑板车"
     popupTitle: "{stationNetwork, select, false {{name}} other {{stationNetwork} {name}}}"
     stopId: "车站 ID: {stopId}"
