fix: add transfer leg support

--- a/packages/itinerary-body/i18n/en-US.yml
+++ b/packages/itinerary-body/i18n/en-US.yml
@@ -58,6 +58,7 @@ otpUi:
       carHail: Ride
       escooter: Ride
       walk: Walk
+    transfer: Transfer{duration, select, undefined {} other {, wait {duration}}}
     unnamedPath: Unnamed Path
     unnamedRoad: Unnamed Road
     vehicleTitle: "{company} {vehicleType}"
