test: update snapshots

--- a/packages/itinerary-body/i18n/fr.yml
+++ b/packages/itinerary-body/i18n/fr.yml
@@ -62,6 +62,7 @@ otpUi:
       carHail: Course en voiture
       escooter: Trottinette
       walk: Marche
+    transfer: Transfer{duration, select, undefined {} other {, wait {duration}}}
     unnamedPath: Chemin sans nom
     unnamedRoad: Route sans nom
     vehicleTitle: "{vehicleType} {company}"
