refactor: address pr feedback

--- a/packages/itinerary-body/i18n/fr.yml
+++ b/packages/itinerary-body/i18n/fr.yml
@@ -62,7 +62,9 @@ otpUi:
       carHail: Course en voiture
       escooter: Trottinette
       walk: Marche
-    transfer: Transfer{duration, select, undefined {} other {, wait {duration}}}
+    transfer: >-
+      Correspondance{duration, select, undefined {} other {, attente
+      {duration}}}
     unnamedPath: Chemin sans nom
     unnamedRoad: Route sans nom
     vehicleTitle: "{vehicleType} {company}"
