feat(map-popup): pass operator images to header

--- a/packages/map-popup/i18n/ko.yml
+++ b/packages/map-popup/i18n/ko.yml
@@ -3,7 +3,8 @@ otpUi:
     availableBikes: "사용 가능한 자전거: {value}"
     availableDocks: "사용 가능한 도크: {value}"
     floatingBike: "프리-플로팅 자전거: {name}"
-    floatingCar: "{company} {name}"
+    floatingCar: "자동차: {name}"
     floatingEScooter: "{name} 전동스쿠터"
+    popupTitle: "{stationNetwork, select, false {{name}} other {{stationNetwork} {name}}}"
     stopId: "정류장 ID: {stopId}"
     stopViewer: 정류장 뷰어
