--- a/packages/map-popup/i18n/ru.yml
+++ b/packages/map-popup/i18n/ru.yml
@@ -3,7 +3,8 @@ otpUi:
     availableBikes: "Доступные велосипеды: {value}"
     availableDocks: "Доступные станции: {value}"
     floatingBike: "Арендный велосипед не на станции: {name}"
-    floatingCar: "{company} {name}"
+    floatingCar: "Авто: {name}"
     floatingEScooter: "Электросамокат: {name}"
+    popupTitle: "{stationNetwork, select, false {{name}} other {{stationNetwork} {name}}}"
     stopId: "Идентификатор остановки: {stopId}"
     stopViewer: Средство просмотра остановок
