--- a/packages/endpoints-overlay/i18n/en-US.yml
+++ b/packages/endpoints-overlay/i18n/en-US.yml
@@ -7,4 +7,4 @@ otpUi:
     saveAsHome: Save as home
     saveAsWork: Save as work
     swapLocation: Change to {locationType} location
-    viewStop: View in stop viewer
+    viewNearby: View in nearby viewer
