fix(location-field): Change recent searches to recent places

--- a/packages/location-field/i18n/es.yml
+++ b/packages/location-field/i18n/es.yml
@@ -1,5 +1,6 @@
 otpUi:
   LocationField:
+    beginTypingPrompt: Comience a escribir para buscar ubicaciones
     clearLocation: Restablecer la ubicación
     currentLocationUnavailable: Ubicación actual no disponible
     fetchingLocation: Buscando la ubicación…
@@ -7,15 +8,15 @@ otpUi:
     geocoderUnreachable: No se pueden obtener sugerencias
     homeLocation: Residencia
     howToAccessResults: >-
-      Utiliza la tecla de flecha abajo para navegar por la lista de los resultados.
-      Para seleccionar un resultado, utiliza la tecla Intro.
+      Utiliza la tecla de flecha abajo para navegar por la lista de los
+      resultados. Para seleccionar un resultado, utiliza la tecla Intro.
     myPlaces: Mis lugares
     nearby: Paradas cercanas
     noResults: Ningún resultado
     other: Otros
     otherCount: "{count, plural, =1 {# otro punto} other {# otros puntos}} de interés"
     parenthesisFormat: "{main} ({detail})"
-    recentlySearched: Buscado recientemente
+    recentPlaces: Lugares recientemente
     resultsFound: "{results} para \"{input}\"."
     stationCount: "{count, plural, =1 {# estacion} other {# estaciones}}"
     stations: Estaciones
@@ -25,4 +26,3 @@ otpUi:
     suggestedLocationsLong: Alternar la visualización de la lista de lugares recomendamos
     useCurrentLocation: Usar ubicación actual
     workLocation: Ubicación de trabajo
-    beginTypingPrompt: Comience a escribir para buscar ubicaciones
