--- a/packages/location-field/i18n/en-US.yml
+++ b/packages/location-field/i18n/en-US.yml
@@ -16,7 +16,7 @@ otpUi:
     other: Other
     otherCount: "{count, plural, =1 {# other point} other {# other points}} of interest"
     parenthesisFormat: "{main} ({detail})"
-    recentlySearched: Recently Searched
+    recentPlaces: Recent places
     resultsFound: "{results} found for \"{input}\"."
     stationCount: "{count, plural, =1 {# station} other {# stations}}"
     stations: Stations
