--- a/packages/location-field/i18n/tr.yml
+++ b/packages/location-field/i18n/tr.yml
@@ -16,7 +16,7 @@ otpUi:
     other: Diğer
     otherCount: "{count, plural, =1 {# other point} diğer {# other points}} ilgi"
     parenthesisFormat: "{main} ({detail})"
-    recentlySearched: Son Arananlar
+    recentPlaces: Son yerler
     resultsFound: "\"{input}\" için bulunan {results}."
     stationCount: "{count, plural, =1 {# station} diğer {# stations}}"
     stations: İstasyonlar
