add geolocate control i18n to exceptons

--- a/packages/base-map/i18n/i18n-exceptions.json
+++ b/packages/base-map/i18n/i18n-exceptions.json
@@ -5,6 +5,10 @@
       "MobileHelpText",
       "WindowsHelpText"
     ],
+    "otpUi.mapControls.GeolocateControl.*": [
+      "FindMyLocation",
+      "LocationNotAvailable"
+    ],
     "otpUi.mapControls.NavigationControl.*": [
       "ResetBearing",
       "ZoomIn",
