fix(trip-form): Add a11y support to subsettings

--- a/packages/trip-form/i18n/en-US.yml
+++ b/packages/trip-form/i18n/en-US.yml
@@ -11,6 +11,8 @@ otpUi:
       bicycle: Bike
       car: Drive
       rent: Rent
+      subsettingsCollapsed: " (Subsettings collapsed)"
+      subsettingsExpanded: " (Subsettings expanded)"
       transit: Transit
       walk: Walk
     settings:
