--- a/packages/base-map/i18n/vi.yml
+++ b/packages/base-map/i18n/vi.yml
@@ -4,6 +4,9 @@ otpUi:
       MacHelpText: Sử dụng phím ⌘ + nút cuộn để phóng to/thu nhỏ bản đồ
       MobileHelpText: Sử dụng hai ngón tay để di chuyển bản đồ
       WindowsHelpText: Sử dụng phím Ctrl + nút cuộn để phóng to/thu nhỏ bản đồ
+    GeolocateControl:
+      FindMyLocation: Tìm vị trí của tôi
+      LocationNotAvailable: Vị trí không có sẵn
     NavigationControl:
       ResetBearing: Đặt lại phương hướng về hướng bắc
       ZoomIn: Phóng to
