chore(trip-form): Add French text for subsettings state

--- a/packages/trip-form/i18n/fr.yml
+++ b/packages/trip-form/i18n/fr.yml
@@ -11,6 +11,8 @@ otpUi:
       bicycle: Vélo
       car: Voiture
       rent: Location
+      subsettingsCollapsed: " (Sous-paramètres réduits)"
+      subsettingsExpanded: " (Sous-paramètres étendus)"
       transit: Transports
       walk: Marche
     settings:
