--- a/packages/trip-details/i18n/en-US.yml
+++ b/packages/trip-details/i18n/en-US.yml
@@ -25,5 +25,5 @@ otpUi:
     transferDiscountExplanation: Transfer discount of {transferAmount} is applied
     transitFare: Transit Fare
     transitFareEntry: "{name}: <strong>{value}</strong>"
-    transitFareTable: Table showing transit fares for this itinerary
+    transitFareTable: Transit fares for this itinerary
     tripIncludesFlex: This trip includes flexible routes. {extraMessage}
