--- a/packages/trip-details/i18n/fr.yml
+++ b/packages/trip-details/i18n/fr.yml
@@ -23,5 +23,5 @@ otpUi:
     transferDiscountExplanation: Cette correspondance vous donne une réduction de {transferAmount}
     transitFare: Tarif en transports
     transitFareEntry: "{name} : <strong>{value}</strong>"
-    transitFareTable: Table showing transit fares for this itinerary
+    transitFareTable: Transit fares for this itinerary
     tripIncludesFlex: Ce trajet comprend un service à la demande (Flex). {extraMessage}
