--- a/packages/printable-itinerary/i18n/tl.yml
+++ b/packages/printable-itinerary/i18n/tl.yml
@@ -12,10 +12,10 @@ otpUi:
         <strong>{place}</strong>
     TransitLeg:
       alight: >-
-        Bumaba sa <strong>{place}</strong> ({stopId}) nang <strong>{time, time,
+        Bumaba sa <strong>{place}</strong>{stopIdPart} nang <strong>{time, time,
         short}</strong>
       board: >-
-        Sumakay sa <strong>{place}</strong> ({stopId}) nang <strong>{time, time,
-        short}</strong>
+        Sumakay sa <strong>{place}</strong>{stopIdPart} nang <strong>{time,
+        time, short}</strong>
       continuesAs: Magpapatuloy bilang {routeDescription}
     depart: <strong>Aalis</strong> sa <strong>{place}</strong>
