--- a/packages/printable-itinerary/i18n/zh_Hant.yml
+++ b/packages/printable-itinerary/i18n/zh_Hant.yml
@@ -7,9 +7,9 @@ otpUi:
     TransitLeg:
       alight: >-
         <strong>{time, time, short}</strong>於<strong>{place}</strong>
-        ({stopId})下車
+        {stopIdPart}下車
       board: >-
         <strong>{time, time, short}</strong>於<strong>{place}</strong>
-        ({stopId})上車
+        {stopIdPart}上車
       continuesAs: 繼續{routeDescription}
     depart: <strong>從</strong>{place}<strong>出發</strong>
